# embedded-arena

./: .env.example  .gitignore  CITATION.bib  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: ci.yml
configs/environments/: empty.yaml  network.yaml
configs/smoke/: gradient-flow.yaml  stm32-speech-train-synthesis.yaml  synthesis-max78000.yaml  synthesis-stm32n6.yaml  train.yaml
data/check_fixtures/: stm32_speech_smoke_model.py  train_smoke_model.py
data/documentation/: max78000.md  max78000_ai8x_exports.md
docs/: README.md  adding-hardware.md  data-assets.md  experiments.md  hardware.md  index.html  model-providers.md  results.md  safety.md  setup.md
embedded_arena/: cli.py  doctor.py  exceptions.py  run.py  schemas.py
embedded_arena/checks/: common.py  compile_esp32.py  compile_max78000.py  flash_esp32.py  train.py  (+6 more)
examples/: cli_smoke_gradient_flow.jsonl  cli_smoke_stm32_speech_train_synthesis.jsonl  cli_smoke_synthesis_max78000.jsonl  cli_smoke_synthesis_stm32n6.jsonl  cli_smoke_train.jsonl
scripts/: analyze_hil.py  check_configs.py  check_docs_links.py  check_python.py  make_ir_video_and_panel.py  plot_results.py  run_compression_trials.sh  run_esp_firmware_temp_experiement.sh  run_esp_heatpad_temp_experiement.sh  run_max_firmware_current_experiement.sh  run_max_firmware_energy_experiement.sh  run_required_baselines.sh  setup_coco_subset.py  setup_esp32.sh  setup_huggingface_assets.sh  setup_max78000.sh  setup_remote_training.sh  setup_stm32ai.sh  test_ir_camera.py  test_llm_adapters.sh
(+54 files in other folders)
